AM_CXXFLAGS=-g -Wall -std=c++11 -O3

noinst_LTLIBRARIES = lib_wnh_filesync_client_concurrent.la
noinst_HEADERS = wnh_filesync_client_concurrent.h
lib_wnh_filesync_client_concurrent_la_SOURCES = wnh_filesync_client_concurrent.cpp
lib_wnh_filesync_client_concurrent_la_CPPFLAGS = -DSOMPLE_LOGS -DDEBUG_MODE_LOGS
lib_wnh_filesync_client_concurrent_la_LIBADD = @LDFLAGS@
