AM_CXXFLAGS=-g -Wall -std=c++11 -O3

noinst_LTLIBRARIES = lib_wnh_inotify_use_mysql.la
noinst_HEADERS = wnh_inotify_use_mysql.h
lib_wnh_inotify_use_mysql_la_SOURCES = wnh_inotify_use_mysql.cpp wnh_inotify_use_mysql_sql.cpp
lib_wnh_inotify_use_mysql_la_CPPFLAGS = -DSOMPLE_LOGS
lib_wnh_inotify_use_mysql_la_LIBADD = @LDFLAGS@
