AM_CXXFLAGS=-g -Wall -std=c++11 -O3

noinst_LTLIBRARIES = lib_wnh_string_string_one_list.la
noinst_HEADERS = wnh_string_string_one_list.h
lib_wnh_string_string_one_list_la_SOURCES = wnh_string_string_one_list.cpp
lib_wnh_string_string_one_list_la_CPPFLAGS = -DSOMPLE_LOGS
lib_wnh_string_string_one_list_la_LIBADD = @LDFLAGS@
